# PYng-Pong-back-end

./: .isort.cfg  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_jogo_criado_por.py  0003_alter_jogo_criado_por.py
pyngpong/: asgi.py  settings.py  urls.py  wsgi.py
