[tool.poetry]
name = "pyng-pong-back-end"
version = "0.1.0"
description = ""
authors = ["PYng-Pong <howman.2018@gmail.com>"]
readme = "README.md"
packages = [{include = "pyng_pong_back_end"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
