[tool.poetry]
name = "pyng-pong-back-end"
version = "0.1.0"
description = ""
authors = ["PYng-Pong <howman.2018@gmail.com>"]
readme = "README.md"
packages = [{include = "pyng_pong_back_end"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
